# DS

./: .env  .env.test  .gitignore  .gitmodules  docker-compose.yml  flake.nix  justfile  report.md  style.css  todo.txt
.github/workflows/: deploy.yml
chain/: Dockerfile  hardhat.config.js  package.json  pnpm-lock.yaml
challenge2/: Dockerfile  fly.toml  index.php  init.sql  login-source.php  login.php  sanity.html  shop-source.php  shop.php
contract/: Dockerfile  challenges.yml  links.md  pyproject.toml
contract/contracts/: SmartChallenge.sol  SmartChallengeProxy.sol  output.txt
contract/scripts/: account.py  challenges.py  deploy-all.py  deploy.py  generate-flag.py  test.py
contract/tests/: test_smartchallenge.py
frontend/: .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  page.tsx
frontend/src/api/: challengeActions.ts  userActions.ts
frontend/src/assets/: abi.json
frontend/src/components/: Nav.tsx
frontend/src/components/context/: MetamaskContext.tsx  UserContext.tsx
frontend/src/components/ui/: AddChallenge.tsx  ChallengeCard.tsx  InvisibleDiv.tsx  (+7 more)
frontend/src/context/: MetamaskContext.tsx  NotificationContext.tsx
frontend/src/lib/: constants.ts
frontend/src/pages/: Challenge.tsx  ChallengeDetails.tsx  Challenges.tsx  Home.tsx  Leaderboard.tsx  Loading.tsx  Login.tsx  User.tsx  Users.tsx
frontend/src/router/: index.tsx
ipfs/: init.sh
ipfs/data/challenges/: sanity.json  shop.json  sqlinjection.json
