[project]
name = "contract"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ape-solidity>=0.8.5",
    "eth-ape>=0.8.22",
]

[tool.ape.compile]
output_extra = ["ABI"]

[[tool.ape.networks.custom]]
name="test"
ecosystem="ethereum"
# base_ecosystem_plugin= "node"
chain_id= 1337
# default_provider="node"

[tool.ape.node.ethereum.test]
uri="http://chain"

